--- a/Attic/encrypt.html
+++ b/Attic/encrypt.html
@@ -82,7 +82,7 @@ document.addEventListener("DOMContentLoaded", (event) => {
 <body>
 
 <div style="width:100vw; display:flex; flex-direction:column; height:90vh;">
-  <textarea id="thetext" rows="20" cols="100" style="width:100%; flex:1;"></textarea>
+  <textarea id="thetext" placeholder="text to encrypt/decrypt" rows="20" cols="100" style="width:100%; flex:1;"></textarea>
   <div>
     <input type="password" placeholder="password" id="thepwd" size="10" style="padding:4px">
     <span style="font-size:30pt;cursor:pointer;" onclick="doWork()">🔒</span>
